# zama-dev-skills

./: README.md  upstream-sources.yaml  upstream-state.json
.github/workflows/: check-upstream.yml
evals/: .gitignore  README.md  pyproject.toml
evals/schema/: schema.json  task.schema.json
evals/src/evals/: __init__.py  cli.py  paths.py  runner.py  task_config.py  templates.py
evals/tasks/: erc7984-confidential-vault.yaml  erc7984-confidential-vesting-dashboard.yaml  fhe-counter-dapp-react-foundry.yaml  fullstack-confidential-voting.yaml  fullstack-sealed-bid-auction.yaml
scripts/: check_upstream.py
skills/zama-fhevm-security-review/: SKILL.md
skills/zama-fhevm-security-review/references/: checklist.md  report-template.md  vulnerability-patterns.md
skills/zama-fhevm-solidity-core/: SKILL.md
skills/zama-fhevm-solidity-core/references/: api.md  overview.md
skills/zama-foundry-forge-fhevm/: SKILL.md
skills/zama-foundry-forge-fhevm/references/: deploy.md  foundry-project.md
skills/zama-fullstack-dapp/: SKILL.md
skills/zama-hardhat-contract-dev/: SKILL.md
skills/zama-hardhat-contract-dev/references/: deploy.md  hardhat-project.md
skills/zama-protocol-dev/: SKILL.md
skills/zama-protocol-dev/references/: skill-map.md  workflow-map.md
skills/zama-sdk/: SKILL.md
skills/zama-sdk/references/: activity-wallet-integration.md  api-reference.md  configuration.md  custom-contracts.md  errors-events.md  getting-started.md  node-and-local.md  react-wagmi-nextjs.md  session-security.md  token-workflows.md  troubleshooting.md
(+32 files in other folders)
