[project]
name = "evals"
version = "0.1.0"
description = "Codex CLI eval runner for Zama protocol development skills"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "thericardoli", email = "104179920+thericardoli@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
zama-eval = "evals.cli:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
